--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "poulpie-soon",
   "version": "1.0.0",
-  "description": "",
+  "description": "poulpie",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "NODE_ENV=production webpack"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nlarche/poulpie-soon.git"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +18,15 @@
   "devDependencies": {
     "css-loader": "^0.23.1",
     "file-loader": "^0.9.0",
+    "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
+    "stylelint": "^7.0.2",
+    "stylelint-config-standard": "^11.0.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
   }
 }
