--- a/package.json
+++ b/package.json
@@ -16,17 +16,31 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
+    "eslint": "^3.1.1",
+    "eslint-loader": "^1.4.1",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-react": "^5.2.2",
     "file-loader": "^0.9.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
     "stylelint": "^7.0.2",
     "stylelint-config-standard": "^11.0.0",
+    "svg-url-loader": "^1.0.3",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "stylelint": {
     "extends": "stylelint-config-standard"
+  },
+  "dependencies": {
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1"
   }
 }
