--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "extends": "stylelint-config-standard"
   },
   "dependencies": {
+    "bulma": "^0.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   }
