--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "2.22.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
     "style-loader": "^0.13.1",
