--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
     "build": "NODE_ENV=production webpack",
-    "deploy": "gh-pages -d dist"
+    "copy": "copyup www/* dist",
+    "deploy": "npm run build && npm run copy && gh-pages -d dist"
   },
   "repository": {
     "type": "git",
