--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "build": "NODE_ENV=production webpack",
+    "build": "rimraf dist && NODE_ENV=production webpack",
     "copy": "copyup www/* dist",
     "deploy": "npm run build && npm run copy && gh-pages -d dist"
   },
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "2.22.0",
     "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "stylelint": "^7.0.2",
     "stylelint-config-standard": "^11.0.0",
