--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "poulpie",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava",
     "start": "webpack-dev-server",
     "build": "rimraf dist && NODE_ENV=production webpack",
     "copy": "copyup www/* dist",
@@ -18,11 +18,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ava": "^0.15.2",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "chai": "^3.5.0",
     "copyfiles": "^1.0.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.1.1",
@@ -32,6 +34,7 @@
     "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "2.22.0",
+    "jsdom": "^9.4.1",
     "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
     "rimraf": "^2.5.4",
@@ -50,5 +53,16 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-google-analytics": "^0.2.0"
+  },
+  "ava": {
+    "files": [
+      "src/**/__tests__/*.js"
+    ],
+    "failFast": true,
+    "tap": true,
+    "require": [
+      "./test/helpers/setup-browser-env.js"
+    ],
+    "babel": "inherit"
   }
 }
