--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 sudo: false
 language: node_js
+node_js:
+  - '6'
+  - '5'
+  - '4'
 cache:
   directories:
     - node_modules
@@ -8,11 +12,11 @@ branches:
   - master
 notifications:
   email: false
-node_js:
-  - '5'
 before_install:
   - npm i -g npm@^3.9.5
 before_script:
   - npm prune
 script:
   - npm run build
+
+after_success: npm run coveralls
