--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "CONFIG=$(pwd)/__tests__/helpers/webpack.config.js BABEL_DISABLE_CACHE=1 NODE_ENV=test ava",
     "check-coverage": "nyc check-coverage --lines 90 --functions 90 --branches 90",
-    "coverage" : "nyc npm run test && npm run check-coverage",
+    "coverage": "nyc npm run test && npm run check-coverage",
+    "report-coveralls": "nyc report --reporter=text-lcov | coveralls",
     "start": "webpack-dev-server",
     "build": "npm run coverage && rimraf dist && NODE_ENV=production webpack",
     "copy": "copyup www/* dist",
@@ -29,6 +30,7 @@
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
     "copyfiles": "^1.0.0",
+    "coveralls": "^2.11.11",
     "css-loader": "^0.23.1",
     "eslint": "^3.1.1",
     "eslint-loader": "^1.4.1",
@@ -68,5 +70,13 @@
       "./__tests__/helpers/setup-browser-env.js"
     ],
     "babel": "inherit"
+  },
+  "nyc": {
+    "exclude": [
+      "**/__tests__/**"
+    ],
+    "include": [
+      "src/**"
+    ]
   }
 }
